# Nozomi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/android/: buffer_queue.hpp  parcel.hpp
include/common/: file.hpp  types.hpp
include/hle/: handle.hpp  handle_table.hpp  ipc.hpp  ipc_buffer.hpp  ipc_manager.hpp  ipc_reply.hpp  kernel.hpp  object.hpp  result.hpp  svc.hpp
include/hle/service/: apm.hpp  applet_oe.hpp  audren.hpp  fatal.hpp  fsp_srv.hpp  hid.hpp  nvdrv.hpp  psm.hpp  set_sys.hpp  sm.hpp  time.hpp  vi.hpp
include/hle/service/applet/: applet.hpp  error_applet.hpp
include/loader/: loader.hpp  nro.hpp
include/nvidia/: host1x.hpp  nvfence.hpp  nvfile.hpp  nvflinger.hpp  nvhost_as_gpu.hpp  nvhost_ctrl.hpp  nvmap.hpp
include/nvidia/channel/: nvhost_gpu.hpp
include/nvidia/dev/: nvhost_as_gpu.hpp  nvhost_ctrl.hpp  nvhost_ctrl_gpu.hpp  nvmap.hpp
include/renderer/: renderer.hpp  window.hpp
include/sys/: cpu.hpp  emulator.hpp  memory.hpp
include/sys/gpu/: compute.hpp  fermi.hpp  kepler.hpp  maxwell.hpp  maxwell_registers.hpp  memory_manager.hpp  pfifo.hpp
src/: main.cpp
src/android/: buffer_queue.cpp  parcel.cpp
src/hle/: handle_table.cpp  ipc_buffer.cpp  ipc_manager.cpp  ipc_reply.cpp  kernel.cpp  object.cpp  svc.cpp
src/hle/service/: apm.cpp  applet_oe.cpp  audren.cpp  fatal.cpp  fsp_srv.cpp  hid.cpp  nvdrv.cpp  psm.cpp  set_sys.cpp  sm.cpp  time.cpp  vi.cpp
src/hle/service/applet/: applet.cpp  error_applet.cpp
src/loader/: loader.cpp  nro.cpp
src/nvidia/: host1x.cpp  nvfile.cpp  nvflinger.cpp  nvhost_as_gpu.cpp  nvhost_ctrl.cpp  nvmap.cpp
src/nvidia/channel/: nvhost_gpu.cpp
src/nvidia/dev/: nvhost_as_gpu.cpp  nvhost_ctrl.cpp  nvhost_ctrl_gpu.cpp  nvmap.cpp
src/renderer/: renderer.cpp  window.cpp
src/sys/: cpu.cpp  emulator.cpp  memory.cpp
src/sys/gpu/: compute.cpp  fermi.cpp  kepler.cpp  maxwell.cpp  memory_manager.cpp  pfifo.cpp
